# Huan_Renderer_CPU

./: .clang-format  .gitignore  CMakeLists.txt  README.md
Renderer/include/core/: application.h  camera.h  core.h  hittable.h  hittable_lists.h  intersection.h  material.h  ray.h
Renderer/include/core/materials/: dielectric.h  lambertian.h  metal.h
Renderer/include/functional/log/: logger.h
Renderer/include/functional/thread/: parallel_task.h  spin_lock.h  task.h  thread_pool.h
Renderer/include/functional/utils/: random.h
Renderer/include/functional/utils/image/: color.h  image.h  image_generator.h  random.h
Renderer/include/math/: core.h  interval.h  mat.h  vec.h
Renderer/include/primitives/: sphere.h
Renderer/src/: main.cpp
Renderer/src/core/: application.cpp  camera.cpp  hittable_lists.cpp
Renderer/src/core/materials/: dielectric.cpp  lambertian.cpp  metal.cpp
Renderer/src/functional/log/: logger.cpp
Renderer/src/functional/thread/: thread_pool.cpp
Renderer/src/functional/utils/image/: image.cpp  image_generator.cpp
Renderer/src/primitives/: sphere.cpp
